[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celx-server"
description = "An example celx server using Flask"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "bczsalba", email = "bczsalba@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["sh40-celx", "flask"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/shade40/celx#readme"
Issues = "https://github.com/shade40/celx/server/issues"
Source = "https://github.com/shade40/celx/server"

[tool.hatch.version]
path = "celx-server/__about__.py"
